--- a/.env.local
+++ b/.env.local
@@ -3,4 +3,4 @@ DB_NAME= "sample_posts"
 
 DEV_URL = "http://localhost:3000"
 
-PROD_URL = ""
+PROD_URL = "https://nextjs-with-mongodb-terjnh.vercel.app/"
